--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,9 @@
       #emailContent {
         display: none;
       }
+      #attachmentsList li {
+        margin-bottom: 5px;
+      }
     </style>
   </head>
   <body>
@@ -107,6 +110,10 @@
         <p><strong>From:</strong> <span id="emailFrom"></span></p>
         <p><strong>Date:</strong> <span id="emailDate"></span></p>
         <div id="emailBody"></div>
+        <div id="emailAttachments">
+          <h4>Attachments:</h4>
+          <ul id="attachmentsList"></ul>
+        </div>
       </div>
     </div>
 
@@ -162,12 +169,18 @@
 
         if (result.success) {
           const emailList = document.getElementById('emailList');
-          emailList.innerHTML = '<ul>' + result.emails.map((email, index) => `
-            <li onclick="showEmail(${index})">
-              <strong>${email.subject}</strong> - ${email.from} <br>
-              <small>${new Date(email.date).toLocaleString()}</small>
-            </li>
-          `).join('') + '</ul>';
+          emailList.innerHTML =
+            '<ul>' +
+            result.emails
+              .map(
+                (email, index) => `
+              <li onclick="showEmail(${index})">
+                <strong>${email.subject}</strong> - ${email.from} <br>
+                <small>${new Date(email.date).toLocaleString()}</small>
+              </li>`
+              )
+              .join('') +
+            '</ul>';
 
           window.emails = result.emails;
         } else {
@@ -185,6 +198,26 @@
         document.getElementById('emailFrom').innerText = email.from;
         document.getElementById('emailDate').innerText = new Date(email.date).toLocaleString();
         document.getElementById('emailBody').innerHTML = email.html || email.text;
+
+        // Display Attachments
+        const attachmentsList = document.getElementById('attachmentsList');
+        attachmentsList.innerHTML = '';
+
+        if (email.attachments && email.attachments.length > 0) {
+          email.attachments.forEach((attachment) => {
+            const link = document.createElement('a');
+            link.href = `data:${attachment.contentType};base64,${attachment.content}`;
+            link.download = attachment.filename;
+            link.innerText = attachment.filename;
+            link.style.display = 'block';
+
+            const listItem = document.createElement('li');
+            listItem.appendChild(link);
+            attachmentsList.appendChild(listItem);
+          });
+        } else {
+          attachmentsList.innerHTML = '<li>No attachments</li>';
+        }
       }
 
       // Back to List
