--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Email, SMS, and Chat</title>
-    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
     <script src="/socket.io/socket.io.js"></script> <!-- Include socket.io -->
+    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
     <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet" />
     <style>
       body {
@@ -78,15 +78,11 @@
       #attachmentsList li {
         margin-bottom: 5px;
       }
-      #emailContent {
-        display: none;
-      }
       .button-container {
         display: flex;
         justify-content: space-between;
         margin-bottom: 10px;
       }
-
       /* Chat specific styles */
       #chatWindow {
         width: 100%;
@@ -96,7 +92,6 @@
         padding: 10px;
         border: 1px solid #ccc;
       }
-
       #chatMessages li {
         padding: 8px;
         margin-bottom: 10px;
@@ -110,7 +105,7 @@
     <nav>
       <button id="emailTab" class="active" onclick="showTab('email')">Send Email & Inbox</button>
       <button id="smsTab" onclick="showTab('sms')">Send SMS</button>
-      <button id="chatTab" onclick="showTab('chat')">Chat</button> <!-- Chat Tab -->
+      <button id="chatTab" onclick="showTab('chat')">Chat</button> <!-- Added the Chat Tab -->
     </nav>
 
     <!-- Send Email and Inbox Form -->
@@ -179,11 +174,8 @@
 
       // Tab Switching Logic
       function showTab(tabName) {
-        // Hide all tabs and remove active class from all buttons
         document.querySelectorAll('.tab').forEach((tab) => tab.classList.remove('active'));
         document.querySelectorAll('nav button').forEach((btn) => btn.classList.remove('active'));
-
-        // Show the active tab and highlight the active button
         document.getElementById(tabName).classList.add('active');
         document.getElementById(tabName + 'Tab').classList.add('active');
       }
@@ -287,8 +279,6 @@
 
       document.getElementById('refreshInbox').addEventListener('click', fetchInbox);
       document.getElementById('inboxTab').addEventListener('click', fetchInbox);
-
-      // Chat-specific code
 
       const socket = io(); // Initialize Socket.IO connection
 
