--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Email, SMS, and Chat</title>
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="/socket.io/socket.io.js"></script> <!-- Include socket.io -->
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
     <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet" />
     <style>
@@ -103,14 +103,28 @@
         max-width: 60%;
         border-radius: 5px;
       }
+      /* Sent messages will align to the right */
       .sender {
         background-color: #007bff;
         color: white;
         margin-left: auto;
       }
+      .sender .label {
+        font-weight: bold;
+        margin-bottom: 5px;
+        display: block;
+        color: #ffffff;
+      }
+      /* Received messages will align to the left */
       .receiver {
         background-color: #f0f0f0;
         color: black;
+      }
+      .receiver .label {
+        font-weight: bold;
+        margin-bottom: 5px;
+        display: block;
+        color: #000000;
       }
     </style>
   </head>
@@ -129,7 +143,7 @@
         <!-- Send Email Form -->
         <div>
           <h2>Send Email</h2>
-          <form id="emailForm" enctype="multipart/form-data">
+          <form id="emailSendForm" enctype="multipart/form-data">
             <input type="email" name="to" placeholder="To" required />
             <input type="text" name="cc" placeholder="CC" />
             <input type="text" name="bcc" placeholder="BCC" />
@@ -184,23 +198,26 @@
     </div>
 
     <script>
+      // Initialize Quill Editor for Email Body
       const quill = new Quill('#editor', { theme: 'snow' });
-      const socket = io();
-      let isChatInitialized = false;
 
+      // Socket.io initialization
+      const socket = io(); // Initialize Socket.IO connection
+
+      // Tab Switching Logic
       function showTab(tabName) {
         document.querySelectorAll('.tab').forEach((tab) => tab.classList.remove('active'));
         document.querySelectorAll('nav button').forEach((btn) => btn.classList.remove('active'));
         document.getElementById(tabName).classList.add('active');
         document.getElementById(tabName + 'Tab').classList.add('active');
 
-        if (tabName === 'chat' && !isChatInitialized) {
-          initializeChat();
-        } else if (tabName === 'email') {
-          fetchInbox();
+        // Trigger socket connection when "chat" tab is opened
+        if (tabName === 'chat') {
+          socket.emit('connect-to-chat'); // Emit the event to the server when the user switches to chat tab
         }
       }
 
+      // Fetch Inbox Emails
       async function fetchInbox() {
         const response = await fetch('/email/receive');
         const result = await response.json();
@@ -226,6 +243,7 @@
         }
       }
 
+      // Show Selected Email
       function showEmail(index) {
         const email = window.emails[index];
         document.getElementById('emailList').style.display = 'none';
@@ -236,6 +254,7 @@
         document.getElementById('emailDate').innerText = new Date(email.date).toLocaleString();
         document.getElementById('emailBody').innerHTML = email.html || email.text;
 
+        // Display Attachments
         const attachmentsList = document.getElementById('attachmentsList');
         attachmentsList.innerHTML = '';
 
@@ -256,6 +275,7 @@
         }
       }
 
+      // Back to List
       document.getElementById('backToList').addEventListener('click', () => {
         document.getElementById('emailList').style.display = 'block';
         document.getElementById('emailContent').style.display = 'none';
@@ -263,66 +283,8 @@
 
       document.getElementById('refreshInbox').addEventListener('click', fetchInbox);
 
-      function initializeChat() {
-        isChatInitialized = true;
-
-        socket.on('new-message', (data) => {
-          const chatMessages = document.getElementById('chatMessages');
-          const newMessage = document.createElement('li');
-          newMessage.textContent = data.message;
-
-          if (data.isSender) {
-            newMessage.classList.add('sender');
-          } else {
-            newMessage.classList.add('receiver');
-          }
-
-          chatMessages.appendChild(newMessage);
-        });
-
-        socket.on('new-file', (data) => {
-          const chatMessages = document.getElementById('chatMessages');
-          const fileLink = document.createElement('a');
-          fileLink.href = `data:${data.contentType};base64,${data.file}`;
-          fileLink.download = data.filename;
-          fileLink.textContent = `Download: ${data.filename}`;
-
-          const newFileMessage = document.createElement('li');
-          newFileMessage.classList.add(data.isSender ? 'sender' : 'receiver');
-          newFileMessage.appendChild(fileLink);
-          chatMessages.appendChild(newFileMessage);
-        });
-
-        document.getElementById('sendMessage').addEventListener('click', () => {
-          const messageInput = document.getElementById('messageInput');
-          const fileInput = document.getElementById('fileInput');
-
-          if (messageInput.value) {
-            socket.emit('chat-message', { message: messageInput.value });
-          }
-
-          if (fileInput.files.length > 0) {
-            const file = fileInput.files[0];
-            const reader = new FileReader();
-
-            reader.onloadend = () => {
-              const fileData = reader.result;
-              socket.emit('send-file', {
-                file: fileData,
-                filename: file.name,
-                contentType: file.type,
-              });
-            };
-
-            reader.readAsDataURL(file);
-          }
-
-          messageInput.value = '';
-          fileInput.value = '';
-        });
-      }
-
-      document.getElementById('emailForm').addEventListener('submit', async (e) => {
+      // Send Email Submission
+      document.getElementById('emailSendForm').addEventListener('submit', async (e) => {
         e.preventDefault();
         const formData = new FormData(e.target);
         formData.append('htmlBody', quill.root.innerHTML);
@@ -336,6 +298,7 @@
         alert(result.success ? 'Email sent successfully!' : 'Failed to send email: ' + result.error);
       });
 
+      // Send SMS Submission
       document.getElementById('smsForm').addEventListener('submit', async (e) => {
         e.preventDefault();
         const formData = new FormData(e.target);
@@ -351,6 +314,122 @@
 
         const result = await response.json();
         alert(result.success ? 'SMS sent successfully!' : 'Failed to send SMS: ' + result.error);
+      });
+
+      // Chat Message Handling
+    //   document.getElementById('sendMessage').addEventListener('click', () => {
+    //     const messageInput = document.getElementById('messageInput');
+    //     const fileInput = document.getElementById('fileInput');
+
+    //     // Send message text
+    //     if (messageInput.value) {
+    //       socket.emit('chat-message', { message: messageInput.value });
+    //     }
+
+    //     // Send file attachment
+    //     if (fileInput.files.length > 0) {
+    //       const file = fileInput.files[0];
+    //       const reader = new FileReader();
+
+    //       reader.onloadend = () => {
+    //         const fileData = reader.result; // Base64 string
+    //         socket.emit('send-file', { file: fileData, filename: file.name, contentType: file.type });
+    //       };
+
+    //       reader.readAsDataURL(file);
+    //     }
+
+    //     messageInput.value = ''; // Clear message input
+    //     fileInput.value = ''; // Clear file input
+    //   });
+
+    document.getElementById('sendMessage').addEventListener('click', () => {
+        const messageInput = document.getElementById('messageInput');
+        const fileInput = document.getElementById('fileInput');
+
+        // Send message text
+        if (messageInput.value) {
+            socket.emit('chat-message', { message: messageInput.value, isSender: true });
+        }
+
+        // Send file attachment
+        if (fileInput.files.length > 0) {
+            const file = fileInput.files[0];
+            const reader = new FileReader();
+
+            reader.onloadend = () => {
+            const fileData = reader.result; // Base64 string
+            socket.emit('send-file', { file: fileData, filename: file.name, contentType: file.type, isSender: true });
+            };
+
+            reader.readAsDataURL(file);
+        }
+
+        messageInput.value = ''; // Clear message input
+        fileInput.value = ''; // Clear file input
+        });
+
+
+      // Display New Chat Message
+    //   socket.on('new-message', (data) => {
+    //     const chatMessages = document.getElementById('chatMessages');
+    //     const newMessage = document.createElement('li');
+
+    //     const label = document.createElement('span');
+    //     label.classList.add('label');
+    //     label.textContent = data.isSender ? 'You' : 'Other';
+
+    //     newMessage.textContent = data.message;
+    //     newMessage.prepend(label);
+
+    //     // Check if the message is sent by the user or received
+    //     if (data.isSender) {
+    //       newMessage.classList.add('sender'); // Sender message
+    //     } else {
+    //       newMessage.classList.add('receiver'); // Receiver message
+    //     }
+
+    //     chatMessages.appendChild(newMessage);
+    //   });
+    socket.on('new-message', (data) => {
+  const chatMessages = document.getElementById('chatMessages');
+  const newMessage = document.createElement('li');
+
+  const label = document.createElement('span');
+  label.classList.add('label');
+  label.textContent = data.isSender ? 'You' : 'Other';
+
+  newMessage.textContent = data.message;
+  newMessage.prepend(label);
+
+  if (data.isSender) {
+    newMessage.classList.add('sender'); // Sent by the user
+  } else {
+    newMessage.classList.add('receiver'); // Received from others
+  }
+
+  chatMessages.appendChild(newMessage);
+});
+
+      // Display New File Attachment
+      socket.on('new-file', (data) => {
+        const chatMessages = document.getElementById('chatMessages');
+        const fileLink = document.createElement('a');
+        fileLink.href = `data:${data.contentType};base64,${data.file}`;
+        fileLink.download = data.filename;
+        fileLink.textContent = `Download: ${data.filename}`;
+
+        const newFileMessage = document.createElement('li');
+
+        const label = document.createElement('span');
+        label.classList.add('label');
+        label.textContent = data.isSender ? 'You' : 'Other';
+
+        newFileMessage.prepend(label);
+
+        newFileMessage.classList.add(data.isSender ? 'sender' : 'receiver');
+        newFileMessage.appendChild(fileLink);
+        chatMessages.appendChild(newFileMessage);
       });
     </script>
   </body>
