--- a/public/index.html
+++ b/public/index.html
@@ -135,6 +135,7 @@
       <button id="emailTab" class="active" onclick="showTab('email')">Send Email & Inbox</button>
       <a href="sms.html" id="smsTab">Send SMS & Inbox</a>
       <button id="chatTab" onclick="showTab('chat')">Chat</button>
+      <button id="callTab" onclick="window.location.href='call.html'">Call</button>
     </nav>
 
     <!-- Send Email and Inbox Form -->
