call and cleanup
add call feature
pre code cleanup

--- a/public/index.html
+++ b/public/index.html
@@ -136,6 +136,7 @@
       <a href="sms.html" id="smsTab">Send SMS & Inbox</a>
       <button id="chatTab" onclick="showTab('chat')">Chat</button>
       <button id="callTab" onclick="window.location.href='call.html'">Call</button>
+      <button onclick="window.location.href='voice.html'">Voice</button>
     </nav>
 
     <!-- Send Email and Inbox Form -->
